# OnlyLegs

./: .deepsource.toml  .gitignore  LICENSE  MANIFEST.in  README.md  app.py  example.env  pyproject.toml  run.py  setup.py
.github/: FUNDING.yml  README.md
.github/workflows/: pylint.yml
gallery/: __init__.py  api.py  auth.py  config.py  db.py  extensions.py  gallery.py  groups.py  image.py  logger.py  metadata.py  models.py  routes.py  routing.py  sassy.py  schema.sql  settings.py  setup.py  theme_manager.py
gallery/langs/: gb.json
gallery/metadata/: __init__.py  helpers.py  mapping.py
gallery/routes/: api.py  groups.py  routing.py  settings.py
gallery/static/: manifest.json
gallery/static/js/: index.js  lable.js  login.js  main.js  notifications.js  popup.js  upload.js  uploadTab.js  webp.js
gallery/static/js/post/: login.js  uploadTab.js
gallery/static/js/pre/: main.js  notifications.js
gallery/static/js/ui/: popup.js
gallery/static/lib/: popup.js  webp.js
gallery/static/sass/: style.sass  variables.sass
gallery/static/sass/components/: banner.sass  gallery.sass  navigation.sass  pop-up.sass
gallery/templates/: error.html  group.html  image.html  index.html  layout.html  list.html  profile.html  settings.html  upload.html
gallery/templates/auth/: login.html  register.html
gallery/templates/groups/: group.html  list.html
gallery/templates/settings/: account.html  general.html  server.html  settings_layout.html
gallery/themes/default/: animations.sass  manifest.json  style.sass  variables.sass
gallery/themes/default/components/: banner.sass  gallery.sass  navigation.sass
gallery/themes/default/ui/: background.sass  banner.sass  content.sass  gallery.sass  notification.sass  pop-up.sass
gallery/user/: example.env  example.yml
gallery/user/themes/default/: style.sass  (+3 more)
gallery/utils/: contrast.py  generate_image.py  theme_manager.py
gallery/utils/metadata/: __init__.py  helpers.py  mapping.py
gallery/views/: api.py  group.py  groups.py  image.py  index.py  profile.py  routing.py  settings.py
onlylegs/: __init__.py  api.py  app.py  auth.py  config.py  extensions.py  filters.py  gwagwa.py  models.py
onlylegs/api/: account.py  group.py  media.py
onlylegs/static/fonts/: font.css
onlylegs/static/js/: clipboard.js  contextMenu.js  fade.js  grid.js  groupPage.js  imagePage.js  index.js  login.js  notifications.js  popup.js  square.js  uploadTab.js
onlylegs/static/sass/: animations.sass  style.sass  variables.sass
onlylegs/templates/: base.html  error.html  group.html  image.html  index.html  layout.html  list.html  profile.html  settings.html
onlylegs/templates/macros/: header.html  image.html
onlylegs/templates/settings/: logs.html
onlylegs/utils/: colour.py  contrast.py  generate_image.py  startup.py
onlylegs/utils/metadata/: __init__.py
onlylegs/views/: group.py  image.py  index.py  profile.py  settings.py
setup/: args.py  configuration.py  runner.py
static/css/: style.css  style.css.map  style.scss
templates/: error.html  group.html  home.html  image.html  layout.html  profile.html  settings.html  upload.html
usr/: example.env
usr/themes/default/: style.scss
(+69 files in other folders)
