[tool.poetry]
name = "onlylegs"
version = "23.04.09"
description = "Gallery built for fast and simple image management"
authors = ["Fluffy-Bean <michal-gdula@protonmail.com>"]
license = "MIT"
readme = ".github/README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-Sqlalchemy = "^3.0.3"
Flask-Migrate = "^4.0.4"
Flask-Compress = "^1.13"
Flask-Caching = "^2.0.2" 
Flask-Assets = "^2.0"
Flask-Login = "^0.6.2"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
pyyaml = "^6.0"
colorthief = "^0.2.1"
Pillow = "^9.4.0"
platformdirs = "^3.0.0"
pylint = "^2.16.3"
libsass = "^0.22.0"
jsmin = "^3.0.1"
cssmin = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
# C0415: Flask uses it to register blueprints
# W0718: Exception are logged so we don't need to raise them
# W0621: Flask deals with this fine, so I dont care about it lol
# R0801: Duplicate code will be dealt with later
disable = "C0415, W0718, W0621, R0801"
