[tool.poetry]
name = "OnlyLegs"
version = "0.1.7"
repository = "https://github.com/Fluffy-Bean/onlylegs"
license = "MIT"
readme = "README.md"
description = "Gallery built for fast and simple image management"
authors = ["Fluffy-Bean <michal-gdula@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.0"
Flask-Sqlalchemy = "^3.0.3"
Flask-Migrate = "^4.0.4"
Flask-Compress = "^1.13"
Flask-Caching = "^1.10.1"
Flask-Assets = "^2.0"
Flask-Login = "^0.6.2"
python-dotenv = "1.0.0"
gunicorn = "^21.2.0"
pyyaml = "^6.0"
colorthief = "^0.2.1"
Pillow = "^10.0.0"
platformdirs = "^4.0.0"
libsass = "^0.22.0"
jsmin = "^3.0.1"
cssmin = "^0.2.0"
pylint = "^3.0.0"
black = "^23.3.0"
cachetools = "^5.3.0"
#material-color-utilities-python = "^0.1.5"
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
# C0415: Flask uses it to register blueprints
# W0718: Exception are logged so we don't need to raise them
# W0621: Flask deals with this fine, so I dont care about it lol
# R0801: Duplicate code will be dealt with later
disable = "C0415, W0718, W0621, R0801"
